--- a/debian/control
+++ b/debian/control
@@ -87,11 +87,9 @@ Description: x86 virtualization solution - Qt based user interface
 
 Package: virtualbox
 Architecture: amd64 i386
-Pre-Depends: dpkg (>= 1.15.6~)
+Pre-Depends: dpkg (>= 1.15.6~), virtualbox-dkms (= ${binary:Version}) | virtualbox-source (= ${source:Version})
 Depends: adduser, ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}
-Recommends: virtualbox-dkms (= ${source:Version}) | virtualbox-source (= ${source:Version}),
-            virtualbox-qt (= ${binary:Version}),
-            ${shlibs:Recommends}
+Recommends: virtualbox-qt (= ${binary:Version}), ${shlibs:Recommends}
 Suggests: vde2, virtualbox-guest-additions-iso
 Conflicts: virtualbox-2.0,
            virtualbox-2.1,
@@ -132,7 +130,8 @@ Package: virtualbox-dkms
 Section: contrib/kernel
 Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: virtualbox (>= ${source:Version}), ${misc:Depends}
+Depends: ${misc:Depends}
+Recommends: virtualbox (>= ${source:Version})
 Description: x86 virtualization solution - kernel module sources for dkms
  VirtualBox is a free x86 virtualization solution allowing a wide range
  of x86 operating systems such as Windows, DOS, BSD or Linux to run on a
