--- a/debian/control
+++ b/debian/control
@@ -87,8 +87,8 @@ Description: x86 virtualization solution - Qt based user interface
 
 Package: virtualbox
 Architecture: amd64 i386
-Pre-Depends: dpkg (>= 1.15.6~), virtualbox-dkms (= ${source:Version}) | virtualbox-source (= ${source:Version})
-Depends: adduser, ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}
+Pre-Depends: dpkg (>= 1.15.6~)
+Depends: adduser, ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}, virtualbox-dkms (= ${source:Version}) | virtualbox-source (= ${source:Version})
 Recommends: virtualbox-qt (= ${binary:Version}), ${shlibs:Recommends}
 Suggests: vde2, virtualbox-guest-additions-iso
 Conflicts: virtualbox-2.0,
