--- a/debian/control
+++ b/debian/control
@@ -150,6 +150,7 @@ Depends: build-essential,
          kbuild,
          module-assistant,
          ${misc:Depends}
+Recommends: virtualbox (>= ${source:Version})
 Description: x86 virtualization solution - kernel module source
  VirtualBox is a free x86 virtualization solution allowing a wide range
  of x86 operating systems such as Windows, DOS, BSD or Linux to run on a
