--- a/debian/control
+++ b/debian/control
@@ -88,7 +88,7 @@ Description: x86 virtualization solution - Qt based user interface
 Package: virtualbox
 Architecture: amd64 i386
 Pre-Depends: dpkg (>= 1.15.6~)
-Depends: adduser, ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}, virtualbox-dkms (= ${source:Version}) | virtualbox-source (= ${source:Version})
+Depends: adduser, ${misc:Depends}, ${python:Depends}, ${shlibs:Depends}, virtualbox-dkms (>= ${source:Version}) | virtualbox-source (>= ${source:Version}) | virtualbox-modules (>= ${source:Version})
 Recommends: virtualbox-qt (= ${binary:Version}), ${shlibs:Recommends}
 Suggests: vde2, virtualbox-guest-additions-iso
 Conflicts: virtualbox-2.0,
@@ -159,6 +159,10 @@ Description: x86 virtualization solution - kernel module source
  This package provides the source code for the virtualbox kernel module.
  The virtualbox package is also required in order to make use of these
  modules. Kernel sources or headers are required to compile this module.
+ .
+ The source is placed under /usr/src, and after decompression it can
+ be built to produce a virtualbox-modules-_KVERS_ providing
+ "virtualbox-modules" package.
 
 Package: virtualbox-guest-dkms
 Section: contrib/kernel
@@ -194,6 +198,10 @@ Description: x86 virtualization solution - guest addition module source
  modules. The virtualbox-guest-utils package is also required in order to
  make use of these modules. Kernel sources or headers are required to compile
  these modules.
+ .
+ The source is placed under /usr/src, and after decompression it can
+ be built to produce a virtualbox-guest-modules-_KVERS_ providing
+ "virtualbox-guest-modules" package.
 
 Package: virtualbox-guest-x11
 Section: contrib/x11
