Update dependency of libgl1-mesa-dev

--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,7 @@ Build-Depends: bzip2,
                libdevmapper-dev,
                libdrm-dev,
                libegl1-mesa-dev,
-               libgl1-mesa-dev,
+               libgl-dev,
                libglu1-mesa-dev,
                libgsoap-dev,
                liblzf-dev,
