--- a/debian/control
+++ b/debian/control
@@ -78,7 +78,7 @@ Build-Depends: bzip2,
                yasm,
                zlib1g-dev
 Standards-Version: 4.7.0
-Rules-Requires-Root: binary-targets
+Rules-Requires-Root: no
 Homepage: https://www.virtualbox.org
 Vcs-Browser: https://salsa.debian.org/pkg-virtualbox-team/virtualbox
 Vcs-Git: https://salsa.debian.org/pkg-virtualbox-team/virtualbox.git
