Add libfuse2 runtime dependency (Closes: #1082889), thanks Marco Moock for the report

--- a/debian/control
+++ b/debian/control
@@ -101,6 +101,7 @@ Package: virtualbox
 Architecture: amd64
 Depends: adduser,
          iproute2,
+         libfuse2,
          procps,
          virtualbox-dkms (>= ${source:Version}) | virtualbox-source (>= ${source:Version}) | virtualbox-modules,
          ${misc:Depends},
